<resources>
    <string name="app_name">Al_jubail</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="close">Close</string>
    <string name="family">Families</string>
    <string name="donors">Donors</string>
    <string name="volunteers">Volunteers</string>
    <string name="guarantor">Guarantor</string>
    <string name="employees">Employees</string>
    <string name="administration">Administration</string>
    <string name="logout">Logout</string>
    <string name="ID_Mother">ID Mother</string>

    <string name="phone">Phone Number</string>
    <string name="place_sign">Place Sign</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
