<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@color/gray1"


    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <!--<ImageView-->
            <!--android:layout_width="180dp"-->
            <!--android:layout_height="130dp"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:src="@drawable/logo2"-->
            <!--/>-->

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_Top"
            app:fletPaddingBottom="12dp"
            app:fletBackground="@color/gray3"


            >

            <EditText
                android:id="@+id/edt_id_mother"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray3"
                android:drawablePadding="8dp"
                android:hint="@string/ID_Mother"
                android:paddingRight="8dp"
                android:textColor="@color/black"
                android:textSize="13sp"


                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_Top"
            app:fletPaddingBottom="12dp"
            app:fletBackground="@color/gray3"


            >
            <EditText
                android:id="@+id/edt_userName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray3"
                android:paddingRight="8dp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:hint="@string/username"
                android:textSize="13sp"


                />


        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_Top"
            app:fletPaddingBottom="12dp"
            app:fletBackground="@color/gray3"
            >
            <EditText
                android:id="@+id/edt_password"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray3"
                android:paddingRight="8dp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="13sp"

                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_Top"
            app:fletPaddingBottom="12dp"
            app:fletBackground="@color/gray3"
            >
            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray3"
                android:paddingRight="8dp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:textSize="13sp"

                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.lamudi.phonefield.PhoneInputLayout
                android:id="@+id/edt_check_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >

            </com.lamudi.phonefield.PhoneInputLayout>

            <com.wrapp.floatlabelededittext.FloatLabeledEditText
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="@dimen/margin_Top"
                app:fletPaddingBottom="12dp"
                app:fletBackground="@color/gray3"
                >
                <EditText
                    android:id="@+id/edt_phone"

                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/gray3"
                    android:paddingRight="8dp"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:hint="@string/phone"
                    android:textSize="13sp"

                    />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        </FrameLayout>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/margin_Top"
            app:fletPaddingBottom="12dp"
            app:fletBackground="@color/gray3"
            >
            <EditText
                android:id="@+id/edt_place_sign"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/gray3"
                android:paddingRight="8dp"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:hint="@string/place_sign"
                android:textSize="13sp"

                />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>


        <Button
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="@dimen/margin_Top"
            android:background="@drawable/btn_login_bg"
            android:textColor="@color/white"
            android:text="@string/register"
            android:elevation="5dp"
            />


    </LinearLayout>
</ScrollView>