<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@color/gray1"


    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="180dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo2"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expand_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:el_duration="2000"
                app:el_expanded="false"
                app:el_parallax=".5"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                    <com.wrapp.floatlabelededittext.FloatLabeledEditText
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="15dp"
                        app:fletPaddingBottom="12dp"
                        app:fletBackground="@color/gray3"


                        >
                        <EditText
                            android:id="@+id/edt_userName"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/gray3"
                            android:paddingRight="8dp"
                            android:drawablePadding="8dp"
                            android:textColor="@color/black"
                            android:hint="@string/username"
                            android:textSize="13sp"


                            />
                    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
                    <com.wrapp.floatlabelededittext.FloatLabeledEditText
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_marginTop="10dp"
                        app:fletPaddingBottom="12dp"
                        app:fletBackground="@color/gray3"
                        >
                        <EditText
                            android:id="@+id/edt_password"

                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/gray3"
                            android:paddingRight="8dp"
                            android:drawablePadding="8dp"
                            android:textColor="@color/black"
                            android:inputType="textPassword"
                            android:hint="@string/password"
                            android:textSize="13sp"

                            />
                    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="8dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/forget_password"
                        android:textStyle="bold"
                        />
                    <Button
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/btn_login_bg"
                        android:textColor="@color/white"
                        android:text="@string/login"
                        android:elevation="5dp"
                        />

                    <TextView
                        android:id="@+id/txt_sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:padding="8dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/sign_up_now"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </net.cachapa.expandablelayout.ExpandableLayout>
        </FrameLayout>



    </LinearLayout>
</ScrollView>